syntax = "proto3";
option java_multiple_files = true;
package vn.techres.microservice.grpc.nestjs_zns;

service ZNSService {
  rpc SendZnsToListCustomer(SendZnsToListCustomerRequest) returns (BaseSendZnsToListCustomerResponse) {};
  rpc SendZnsToSingleCustomer(SendZnsToSingleCustomerRequest) returns (BaseSendZnsToListCustomerResponse) {};
  
}

message SendZnsToListCustomerRequest {
  repeated string phones = 1;
  string template_id = 2;
  string access_token = 3;
}

message SendZnsToSingleCustomerRequest {
  string phone = 1;
  string template_id = 2;
  string access_token = 3;
}

message BaseSendZnsToListCustomerResponse {
  int32 status = 1;
  string message = 2;
  EmptyResponse data = 3;
}

message EmptyResponse {
}

message SendZnsToListCustomerResponse {
  string message = 1;
}
